fixed spacing below logo in banner

--- a/BlueNote/style/css/ids.css
+++ b/BlueNote/style/css/ids.css
@@ -60,6 +60,7 @@
 {
 	float: left;
 	padding: 0px 24px 0px 0px;
+    line-height: 0;
 }
 
 #SystemName 
